# cardiovascular_system_hjertet

./: .gitignore  Exercise Heart 1.ipynb  Exercise Heart 2.ipynb  Exercise Heart 2a.ipynb  Exercise Heart 2b.ipynb  LICENSE  README.md  pyproject.toml  {{REPO_NAME}}.pptx  {{REPO_NAME}}_questions.docx
files/: HodgkinHuxley.py  heart_pressures.csv  heart_pressures.csv.bak  load_physionet_data.py
files/autonomic-aging-cardiovascular/: 0001.csv  0002.csv  subject-info.csv
files/mhd-effect-ecg-mri/: ecg_data1.csv
