[project]
name = "cardiovascular-system-blood"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.15.1",
    "heartpy>=1.2.7",
    "ipywidgets",
    "matplotlib",
    "nbformat",
    "numpy",
    "pandas",
    "plotly",
    "pyside6",
    "setuptools>=80.9.0",
    "wfdb>=4.3.0",
]

[dependency-groups]
dev = [
    "ipykernel",
    "uv",
]
