[project]
name = "cardiovascular-system-heart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py",
    "heartpy",
    "ipywidgets",
    "matplotlib",
    "nbformat",
    "numpy",
    "pandas",
    "plotly",
    "pyside6",
    "setuptools",
    "wfdb",
]

[dependency-groups]
dev = [
    "ipykernel",
    "uv",
]
